# serf

./: .dockerignore  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
assets/: DSPy.md  PYSPARK.md
docs/: BUILD_PLAN.md  FINE_TUNING.md  QUICKSTART.md  SCALABILITY.md  SERF_LONG_SHOT_PLAN.md
scripts/: generate_benchmark_data.py  run_benchmarks.py
src/serf/: config.py  logs.py  pipeline.py  tracking.py
src/serf/analyze/: __init__.py  field_detection.py  profiler.py
src/serf/block/: embeddings.py  faiss_blocker.py  normalize.py  pipeline.py  subprocess_embed.py
src/serf/cli/: __init__.py  main.py
src/serf/dspy/: agents.py  baml_adapter.py  signatures.py  type_generator.py  types.py
src/serf/edge/: __init__.py  resolver.py
src/serf/eval/: __init__.py  benchmarks.py  evaluator.py  metrics.py
src/serf/match/: __init__.py  few_shot.py  matcher.py  uuid_mapper.py
src/serf/merge/: __init__.py  merger.py
src/serf/spark/: __init__.py  graph.py  iceberg.py  pipeline.py  schemas.py  utils.py
tests/: test_agents.py  test_analyze_benchmark.py  test_benchmark.py  test_benchmark_comparison.py  test_benchmarks.py  test_cli.py  test_dspy.py  test_edge_resolver.py  test_embeddings.py  test_evaluator.py  test_faiss_blocker.py  test_few_shot.py  test_field_detection.py  test_graph.py  test_merger.py  test_metrics.py  test_normalize.py  test_profiler.py  test_schemas.py  test_signatures.py  test_spark_pipeline.py  test_type_generator.py  test_types.py  test_uuid_mapper.py
