[project]
name = "serf"
version = "0.1.0"
description = "SERF: Agentic Semantic Entity Resolution Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Russell Jurney", email = "rjurney@graphlet.ai"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "dspy-ai>=3.0.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "pyspark>=4.0,<5.0",
    "sentence-transformers>=5.1",
    "faiss-cpu>=1.9",
    "cleanco>=2.3",
    "tqdm>=4.60",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyspark-mcp>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/Graphlet-AI/serf"
Repository = "https://github.com/Graphlet-AI/serf"
Documentation = "https://github.com/Graphlet-AI/serf#readme"
Issues = "https://github.com/Graphlet-AI/serf/issues"

[project.scripts]
serf = "serf.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serf"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
    "zuban>=0.0.23",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["serf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.zuban]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
